Aligned forgot password and remember me properly. Fixed tick display on phone

--- a/public/components/signin/_signin.css
+++ b/public/components/signin/_signin.css
@@ -109,15 +109,20 @@ $error-color: #dd4b39;
 
 %signin-form__checkbox {
   @extend %font-text-sans-2;
-  display: inline-block;
+  display: block;
+  position: relative;
+  top: -0.2rem;
+  float: left;
   border: 1px solid #989898;
   border-radius: 3px;
   box-sizing: border-box;
   cursor: pointer;
   width: 2rem;
   height: 2rem;
-  padding: 0 0.4rem;
+  padding: 0 0 0 0.1rem;
   margin: 0 0.5rem 0 0;
+  text-align: center;
+  font-weight: normal;
 }
 
 .signin-form__checkbox--remember-me {
@@ -164,9 +169,10 @@ $error-color: #dd4b39;
 }
 
 .signin-form__cta--reset {
-  @extend %signin-form__cta;
+  @extend %font-text-1;
   position: absolute;
   right: 0;
+  margin: 0;
 }
 
 .signin-form__terms {
